--- a/src/index.css
+++ b/src/index.css
@@ -70,15 +70,25 @@
     }
   }
 
+  .flex-important {
+    display: flex !important;
+  }
+
+  .mx-100 {
+    margin-left: 100px !important;
+    margin-right: 100px !important;
+  }
+
   @media (max-width: 640px) {
     /* All flex become block */
-    .flex {
+    .flex{
       display: block !important;
     }
 
-    .mx-\[100px\]\! {
-      margin-inline: 0 !important;
-    }
+    .mx-100 {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 
     .pl-\[47px\]\! {
       padding-left: 0 !important;
